[#11433] Change servermap agent list condition