@@ -12,12 +12,13 @@ import com.navercorp.pinpoint.web.vo.Application;
 import com.navercorp.pinpoint.web.vo.ResponseTime;
 import com.navercorp.pinpoint.web.vo.agent.AgentAndStatus;
 import com.navercorp.pinpoint.web.vo.agent.AgentInfo;
-import com.navercorp.pinpoint.web.vo.agent.AgentInfoFilter;
 import com.navercorp.pinpoint.web.vo.agent.AgentInfoFilters;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatus;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatusFilter;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatusFilters;
 import com.navercorp.pinpoint.web.vo.agent.AgentStatusQuery;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
@@ -27,13 +28,13 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 
 @Service
 public class ApplicationAgentListServiceImpl implements ApplicationAgentListService {
-    // add exclamatory mark to indicate that the agent info is not available and prioritize it higher in the natural order comparison.
-    private static final String NO_AGENT_INFO = "!noAgentInfo";
+    private final Logger logger = LogManager.getLogger(this.getClass());
 
     private final ApplicationIndexDao applicationIndexDao;
     private final AgentInfoDao agentInfoDao;
@@ -51,36 +52,47 @@ public class ApplicationAgentListServiceImpl implements ApplicationAgentListServ
         this.mapResponseDao = Objects.requireNonNull(mapResponseDao, "mapResponseDao");
     }
 
+    boolean isValidServiceType(ServiceType serviceType) {
+        return serviceType != null && serviceType != ServiceType.UNDEFINED;
+    }
+
+    Predicate<AgentInfo> getServiceTypeFilter(ServiceType serviceType) {
+        if (isValidServiceType(serviceType)) {
+            return AgentInfoFilters.exactServiceType(serviceType.getName());
+        }
+        return AgentInfoFilters.acceptAll();
+    }
+
     @Override
-    public List<AgentAndStatus> allAgentList(Application application, Range range, AgentInfoFilter agentInfoFilter) {
-        final ServiceType serviceType = application.getServiceType();
-        final List<String> agentIds = this.applicationIndexDao.selectAgentIds(application.getName());
-        final List<AgentInfo> agentInfoList = getNullHandledAgentInfo(application, agentIds, range.getTo());
+    public List<AgentAndStatus> allAgentList(String applicationName, ServiceType serviceType, Range range, Predicate<AgentInfo> agentInfoPredicate) {
+        final List<String> agentIds = this.applicationIndexDao.selectAgentIds(applicationName);
+        final List<AgentInfo> agentInfoList = getNullHandledAgentInfo(applicationName, serviceType, agentIds, range.getTo());
+        final Predicate<AgentInfo> agentServiceTypeFilter = getServiceTypeFilter(serviceType);
 
         List<AgentAndStatus> agentAndStatusList = agentInfoList.stream()
-                .filter(serviceType != ServiceType.UNDEFINED ? AgentInfoFilters.exactServiceType(serviceType.getName()) : agentInfo -> true)
-                .filter(agentInfoFilter)
+                .filter(agentServiceTypeFilter)
+                .filter(agentInfoPredicate)
                 .map(agentInfo -> new AgentAndStatus(agentInfo, null))
                 .collect(Collectors.toList());
         return agentAndStatusList;
     }
 
     @Override
-    public List<AgentAndStatus> activeStatusAgentList(Application application, Range range, AgentInfoFilter agentInfoFilter) {
-        final ServiceType serviceType = application.getServiceType();
-        final List<String> agentIds = this.applicationIndexDao.selectAgentIds(application.getName());
-        final List<AgentInfo> agentInfoList = this.agentInfoDao.getSimpleAgentInfos(agentIds, range.getTo());
+    public List<AgentAndStatus> activeStatusAgentList(String applicationName, ServiceType serviceType, Range range, Predicate<AgentInfo> agentInfoPredicate) {
+        final List<String> agentIds = this.applicationIndexDao.selectAgentIds(applicationName);
+        final List<AgentInfo> agentInfoList = getNullHandledAgentInfo(applicationName, serviceType, agentIds, range.getTo());
+        final Predicate<AgentInfo> agentServiceTypeFilter = getServiceTypeFilter(serviceType);
 
         List<AgentInfo> filteredAgentInfoList = agentInfoList.stream()
-                .filter(Objects::nonNull)
-                .filter(serviceType != ServiceType.UNDEFINED ? AgentInfoFilters.exactServiceType(serviceType.getName()) : agentInfo -> true)
-                .filter(agentInfoFilter)
-                .toList();
+                .filter(ACTUAL_AGENT_INFO_PREDICATE) // filter out not actual agent info
+                .filter(agentServiceTypeFilter)
+                .filter(agentInfoPredicate)
+                .collect(Collectors.toList());
 
         List<AgentAndStatus> agentAndStatusList = getAgentAndStatuses(filteredAgentInfoList, range);
 
         AgentStatusFilter agentStatusFilter = AgentStatusFilters.recentStatus(range.getFrom());
-        List<AgentAndStatus> result = agentAndStatusList.stream()
+        final List<AgentAndStatus> result = agentAndStatusList.stream()
                 .filter(agentAndStatus -> isActiveAgentPredicate(agentAndStatus, agentStatusFilter, range))
                 .collect(Collectors.toList());
         return result;
@@ -103,7 +115,7 @@ public class ApplicationAgentListServiceImpl implements ApplicationAgentListServ
         if (agentStatusFilter.test(agentAndStatus.getStatus())) {
             return true;
         }
-        AgentInfo agentInfo = agentAndStatus.getAgentInfo();
+        final AgentInfo agentInfo = agentAndStatus.getAgentInfo();
         if (legacyAgentCompatibility.isLegacyAgent(agentInfo.getServiceTypeCode(), agentInfo.getAgentVersion())) {
             return legacyAgentCompatibility.isActiveAgent(agentInfo.getAgentId(), range);
         }
@@ -112,35 +124,33 @@ public class ApplicationAgentListServiceImpl implements ApplicationAgentListServ
     }
 
     @Override
-    public List<AgentAndStatus> activeResponseAgentList(Application application, Range range, AgentInfoFilter agentInfoFilter) {
-        List<String> agentIds = getActiveAgentIdsFromResponse(application, range);
-        List<AgentInfo> agentInfoList = getNullHandledAgentInfo(application, agentIds, range.getTo());
+    public List<AgentAndStatus> activeStatisticsAgentList(String applicationName, ServiceType serviceType, Range range, Predicate<AgentInfo> agentInfoPredicate) {
+        final List<String> agentIds = getActiveAgentIdsFromStatistics(applicationName, serviceType, range);
+        final List<AgentInfo> agentInfoList = getNullHandledAgentInfo(applicationName, serviceType, agentIds, range.getTo());
 
         List<AgentAndStatus> result = agentInfoList.stream()
-                .filter(agentInfoFilter)
+                .filter(agentInfoPredicate)
                 .map(agentInfo ->
                         new AgentAndStatus(agentInfo, new AgentStatus(agentInfo.getAgentId(), AgentLifeCycleState.RUNNING, range.getTo())))
-                .toList();
+                .collect(Collectors.toList());
         return result;
     }
 
-    private List<String> getActiveAgentIdsFromResponse(Application application, Range range) {
-        if (application.getServiceType() == ServiceType.UNDEFINED) {
-            return new ArrayList<>(getAgentIdSetFromResponse(application.getName(), range));
+    private List<String> getActiveAgentIdsFromStatistics(String applicationName, ServiceType serviceType, Range range) {
+        if (isValidServiceType(serviceType)) {
+            return new ArrayList<>(getAgentIdsFromStatistics(new Application(applicationName, serviceType), range));
         }
-        return new ArrayList<>(getAgentIdSetFromResponse(application, range));
-    }
 
-    private Set<String> getAgentIdSetFromResponse(String applicationName, Range range) {
+        // find all serviceType with applicationName
         Set<String> result = new HashSet<>();
         List<Application> applications = applicationIndexDao.selectApplicationName(applicationName);
         for (Application application : applications) {
-            result.addAll(getAgentIdSetFromResponse(application, range));
+            result.addAll(getAgentIdsFromStatistics(application, range));
         }
-        return result;
+        return new ArrayList<>(result);
     }
 
-    private Set<String> getAgentIdSetFromResponse(Application application, Range range) {
+    private Set<String> getAgentIdsFromStatistics(Application application, Range range) {
         List<ResponseTime> responseTimes = mapResponseDao.selectResponseTime(application, range);
         return responseTimes.stream()
                 .map(ResponseTime::getAgentIds)
@@ -148,24 +158,44 @@ public class ApplicationAgentListServiceImpl implements ApplicationAgentListServ
                 .collect(Collectors.toSet());
     }
 
-    private List<AgentInfo> getNullHandledAgentInfo(Application application, List<String> agentIds, long toTimestamp) {
-        List<AgentInfo> agentInfos = this.agentInfoDao.getSimpleAgentInfos(agentIds, toTimestamp);
+    private List<AgentInfo> getNullHandledAgentInfo(String applicationName, ServiceType serviceType, List<String> agentIds, long toTimestamp) {
+        final List<AgentInfo> agentInfos = this.agentInfoDao.getSimpleAgentInfos(agentIds, toTimestamp);
         List<AgentInfo> result = new ArrayList<>(agentIds.size());
         for (int i = 0; i < agentIds.size(); i++) {
-            result.add(Objects.requireNonNullElse(agentInfos.get(i), createNotFoundAgentInfo(application, agentIds.get(i))));
+            result.add(Objects.requireNonNullElse(agentInfos.get(i), createNotFoundAgentInfo(applicationName, serviceType, agentIds.get(i))));
         }
         return result;
     }
 
-    private AgentInfo createNotFoundAgentInfo(Application application, String agentId) {
+    private AgentInfo createNotFoundAgentInfo(String applicationName, ServiceType serviceType, String agentId) {
         AgentInfo agentInfo = new AgentInfo();
-        agentInfo.setApplicationName(application.getName());
+        agentInfo.setApplicationName(applicationName);
         agentInfo.setAgentId(agentId);
 
-        // for Json serialization and serviceType filter
-        agentInfo.setServiceType(application.getServiceType());
+        // for Json serialization
+        if (serviceType == null) {
+            agentInfo.setServiceType(ServiceType.UNDEFINED);
+        } else {
+            agentInfo.setServiceType(serviceType);
+        }
         // for hostName grouping
-        agentInfo.setHostName(NO_AGENT_INFO);
+        agentInfo.setHostName(AGENT_INFO_NOT_FOUND_HOSTNAME);
         return agentInfo;
+    }
+
+    @Override
+    public List<AgentAndStatus> activeAllAgentList(String applicationName, ServiceType serviceType, Range range, Predicate<AgentInfo> agentInfoPredicate) {
+        final List<AgentAndStatus> activeStatusAgentList = activeStatusAgentList(applicationName, serviceType, range, agentInfoPredicate);
+        final List<AgentAndStatus> activeResponseAgentList = activeStatisticsAgentList(applicationName, serviceType, range, agentInfoPredicate);
+
+        Set<AgentAndStatus> result = new HashSet<>();
+        result.addAll(activeStatusAgentList);
+        result.addAll(activeResponseAgentList);
+
+        if (result.size() != activeStatusAgentList.size() || result.size() != activeResponseAgentList.size()) {
+            logger.info("active agent check result is different. applicationName:{}, serviceType:{}, activeStatusAgentList:{}, activeResponseAgentList:{}, result:{}",
+                    applicationName, serviceType, activeStatusAgentList.size(), activeResponseAgentList.size(), result.size());
+        }
+        return new ArrayList<>(result);
     }
 }
